Update README template for libbrook

--- a/modules/swagger-codegen/src/main/resources/python/README.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/README.mustache
@@ -1,8 +1,16 @@
-## Requirements.
-Python 2.7 and later.
+# libbrook
 
-## Setuptools
-You can install the bindings via [Setuptools](http://pypi.python.org/pypi/setuptools).
+Python client library for [Brook.io](https://brook.io)
+
+
+## Requirements.
+
+Python 2.7 and later. Tested on 2.7 and 3.4.
+
+
+## Installation
+
+You can install the library via [setuptools](http://pypi.python.org/pypi/setuptools).
 
 ```sh
 python setup.py install
@@ -11,63 +19,29 @@ python setup.py install
 Or you can install from Github via pip:
 
 ```sh
-pip install git+https://github.com/geekerzp/swagger_client.git
+pip install git+https://github.com/doalitic/libbrook.git
 ```
 
-To use the bindings, import the pacakge:
+To use the library, import the package:
 
 ```python
-import swagger_client
+import libbrook
 ```
 
-## Manual Installation
-If you do not wish to use setuptools, you can download the latest release.
-Then, to use the bindings, import the package:
-
-```python
-import path.to.swagger_client
-```
 
 ## Getting Started
 
 TODO
 
+
 ## Documentation
 
 TODO
 
-## Tests
 
-(Please make sure you have [virtualenv](http://docs.python-guide.org/en/latest/dev/virtualenvs/) installed)
+## Credits
 
- Execute the following command to run the tests in the current Python (v2 or v3) environment:
+Brook.io is developed by [Doalitic](https://doalitic.com).
 
-```sh
-$ make test
-[... magically installs dependencies and runs tests on your virtualenv]
-Ran 7 tests in 19.289s
-
-OK
-```
-or
-
-```
-$ mvn integration-test -rf :PythonPetstoreClientTests
-Using 2195432783 as seed
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
-[INFO] Total time: 37.594 s
-[INFO] Finished at: 2015-05-16T18:00:35+08:00
-[INFO] Final Memory: 11M/156M
-[INFO] ------------------------------------------------------------------------
-```
-If you want to run the tests in all the python platforms:
-
-```sh
-$ make test-all
-[... tox creates a virtualenv for every platform and runs tests inside of each]
-  py27: commands succeeded
-  py34: commands succeeded
-  congratulations :)
-```
+This library is automatically generated from Swagger specifications via
+[swagger-codegen](https://github.com/swagger-api/swagger-codegen).
