--- a/modules/swagger-codegen/src/main/resources/python/setup.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/setup.mustache
@@ -21,9 +21,9 @@ setup(
     name=NAME,
     version=VERSION,
     description="{{appName}}",
-    author_email="{{infoEmail}}",
-    url="{{infoUrl}}",
-    keywords=["Swagger", "{{appName}}"],
+    author_email="devops@doalitic.com",
+    url="https://github.com/doalitic/libbrook",
+    keywords=["brook.io", "api", "cloud"],
     install_requires=REQUIRES,
     packages=find_packages(),
     include_package_data=True,
